syntax = "proto2";
package com.orbekk.protobuf;

// Next tag: 6
message Request {
    optional string full_service_name = 1;
    optional string method_name = 2;
    optional bytes request_proto = 3;
    optional int64 request_id = 4;
}

// Next tag: 8
message Response {
    optional bytes response_proto = 1;
    enum RpcError {
        UNKNOWN_SERVICE = 0;
        UNKNOWN_METHOD = 1;
        CANCELED = 2;
        INVALID_PROTOBUF = 3;
    };
    optional RpcError error = 2;
    optional int64 request_id = 5;
    
    // Rpc status
    optional bool hasFailed = 4;
    optional bool canceled = 6;
    optional bool done = 7 ;
    optional string error_text = 3;
}
